# Notepad

./: .gitignore  CMakeLists.txt  README.md  editmanager.cpp  editmanager.h  filemanager.cpp  filemanager.h  fontmanager.cpp  fontmanager.h  main.cpp  notepad.cpp  notepad.h  notepad.ui  res.qrc  shortcutmanager.cpp  shortcutmanager.h
